--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <body>
       <p>Hello 大家好</p>
 <p>我是luo，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<html>
+
+      <h3> Using the <i> download attribute of <a> tag </i> to create file download button using JavaScript. </h3>
+      <p> Click the below button to download the image file </p>
+      <a href = "https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?cs=srgb&dl=pexels-pixabay-268533.jpg&fm=jpg"
+      Download = "test_image">
+         <button type = "button"> Download </button>
+      </a>
+
+
         <div id="anwei"></div>
         <!--引入jquery-->
         <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
