--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
       <p>Hello 大家好</p>
 <p>我是luo，这是我的个人网站。 </p>
 <html>
-
-      <h3> Using the <i> download attribute of <a> tag </i> to create file download button using JavaScript. </h3>
-      <p> Click the below button to download the image file </p>
-      <a href = "https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?cs=srgb&dl=pexels-pixabay-268533.jpg&fm=jpg"
+      <h3>sql源代码</h3>
+      <a href = "./sql/2201.sql"
       Download = "test_image">
-         <button type = "button"> Download </button>
+         <button type = "button"> 下载 </button>
       </a>
-
 
         <div id="anwei"></div>
         <!--引入jquery-->
