--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a class="cd-btn" href="about.html">关于站主</a>
                 </div>
                 <div class="cd-half-width cd-img-container">
-                    <img src="style/images/tech-1.png" alt="周红" title="周红" />
+                    <img src="style/images/tech-1.png" alt="luo" title="luo" />
                 </div>
             </li>
             <li>
@@ -60,7 +60,7 @@
                 	<!-- <a href="https://www.cnblogs.com/Tom-shushu/"><h4>电脑端请点击这里</h4></a> -->
                     <h2>观点与分享</h2>
                     <p>记录生活点滴，分享人生喜乐！</p>
-                    <a class="cd-btn" href="https://www.cnblogs.com/Tom-shushu/" target="_blank">站主的博客园</a>
+                    <!-- <a class="cd-btn" href="https://www.cnblogs.com/Tom-shushu/" target="_blank">站主的博客园</a> -->
                 </div>
             </li>
             <li>
