--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h2>罗</h2>
                     <p>爱音乐、爱折腾、爱生活</p>
                     <p>Java开发攻城狮</p>
-                    <a class="cd-btn" href="about.html">关于站主</a>
+                    <!-- <a class="cd-btn" href="about.html">关于站主</a> -->
                 </div>
                 <div class="cd-half-width cd-img-container">
                     <img src="style/images/tech-1.png" alt="luo" title="luo" />
