--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Tom-shushu`s Web</title> 
+    <title>欢迎</title> 
     <!-- Js -->
     <link rel="stylesheet" href="style/css/bootstrap.min.css">
     <script src="style/js/jquery.min.js"></script>
@@ -68,7 +68,7 @@
                 	<!-- <a href="vip/yule.html"><h4>电脑端请点击这里</h4></a> -->
                     <h2>影视，直播，购物</h2>
                     <p>观看生活影片，感受欢天喜地！</p>
-                    <a class="cd-btn" href="vip/yule.html" target="_blank">娱乐</a>
+                    <!-- <a class="cd-btn" href="vip/yule.html" target="_blank">娱乐</a> -->
                 </div>
             </li>
             <li class="cd-bg-video">
@@ -86,7 +86,7 @@
                 	<!-- <a href="tracks.html"><h4>电脑端请点击这里</h4></a> -->
                     <h2>说走就走</h2>
                     <p>生活不止眼前的苟且，还有诗和远方的田野！拿起相机和你喜欢的人一起来一场说走就走的旅行也是不错的！！</p>
-                    <a class="cd-btn" href="tracks.html">我的相册</a>
+                    <!-- <a class="cd-btn" href="tracks.html">我的相册</a> -->
                 </div>
             </li>
         </ul>
@@ -150,7 +150,7 @@
 <script type="text/javascript">
     function show_site_runtime(){
 	window.setTimeout("show_site_runtime()",1000); // 每秒运行一次函数
-	X=new Date("04/10/2019 00:00:00"); //在这里修改你的建站时间
+	X=new Date("01/17/2024 00:00:00"); //在这里修改你的建站时间
 	Y=new Date();
 	T=(Y.getTime()-X.getTime()); // 获取当前时间与指定时间之间的时间间隔（ms）	
 	i=24*60*60*1000;
