--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             	    <!-- <a href="https://tom-shushu.github.io/MyWebsite.github.io/"><h4>电脑端请点击这里</h4></a> -->
                     <h2>罗</h2>
                     <p>爱音乐、爱折腾、爱生活</p>
-                    <p>Java开发攻城狮</p>
-                    <!-- <a class="cd-btn" href="about.html">关于站主</a> -->
+                    <p>JavaWeb开发工程师</p>
+                    <a class="cd-btn" href="about.html">关于站主</a>
                 </div>
                 <div class="cd-half-width cd-img-container">
                     <img src="style/images/tech-1.png" alt="luo" title="luo" />
