--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <div class="about" style="margin-bottom: 40px;">
                     <p><span style="font-size: 18pt;">关于站主</span></p>
                     
-                    <p>站主名叫罗</p>
+                    <p>站主名叫罗福良</p>
                     <p>JavaWeb开发工程师</p>
                     <p>喜欢音乐、爱生活、爱折腾、爱行走</p>
                     <p></p>
