--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-	<bgsound src="music/天空之城.mp3"></bgsound>
+	<bgsound src="music/周杰伦 - 晴天.mp3"></bgsound>
     <!-- Header -->
     <div class="nav">
     <a class="logo" href="index.html"><img src="style/images/logo.png" width="40" title="红"></a>
@@ -46,7 +46,7 @@
                 <div class="cd-half-width">
                 	
             	    <!-- <a href="https://tom-shushu.github.io/MyWebsite.github.io/"><h4>电脑端请点击这里</h4></a> -->
-                    <h2>罗福良</h2>
+                    <h2>罗</h2>
                     <p>爱音乐、爱折腾、爱生活</p>
                     <p>JavaWeb开发工程师</p>
                     <a class="cd-btn" href="about.html">关于站主</a>
