--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a class="cd-btn" href="about.html">关于站主</a>
                 </div>
                 <div class="cd-half-width cd-img-container">
-                    <img src="./imgs/wallhaven-8596q2.png" alt="luo" title="luo" />
+                    <img src="style/images/tech-1.png" alt="luo" title="luo" />
                 </div>
             </li>
             <li>
@@ -79,7 +79,6 @@
                     <a class="cd-btn" href="friends.html">在各社区尽情的遨游吧</a>
                 </div>
                 <div class="cd-bg-video-wrapper" data-video="Tpl/Individual/Style/index/video/video">
-
                 </div>
             </li>
             <li>
@@ -143,7 +142,11 @@
     });
     </script>
 
-
+    <!--
+    	作者：15249239025@163.com
+    	时间：2019-04-18
+    	描述：时间
+    -->
 <script type="text/javascript">
     function show_site_runtime(){
 	window.setTimeout("show_site_runtime()",1000); // 每秒运行一次函数
